[gd_scene load_steps=10 format=2]

[ext_resource path="res://Art/GUI/music.png" type="Texture" id=1]
[ext_resource path="res://Art/GUI/sound_hover.png" type="Texture" id=2]
[ext_resource path="res://Art/GUI/sounds.png" type="Texture" id=3]
[ext_resource path="res://Art/GUI/music_hover.png" type="Texture" id=4]
[ext_resource path="res://Art/GUI/x.png" type="Texture" id=5]
[ext_resource path="res://Art/GUI/x_hover.png" type="Texture" id=6]
[ext_resource path="res://Art/Assets/book.png" type="Texture" id=7]
[ext_resource path="res://Art/Fonts/m5x7.tres" type="DynamicFont" id=8]
[ext_resource path="res://Scenes/OptionsMenu.gd" type="Script" id=9]

[node name="OptionsMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Book" type="Sprite" parent="."]
position = Vector2( -224, 0 )
texture = ExtResource( 7 )
centered = false

[node name="TextureRect" type="TextureRect" parent="Book"]
margin_left = 120.0
margin_top = 15.0
margin_right = 216.0
margin_bottom = 114.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Book"]
margin_left = 175.0
margin_top = 16.0
margin_right = 215.0
margin_bottom = 58.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="TextureButton" parent="Book/VBoxContainer"]
margin_right = 40.0
margin_bottom = 8.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 2 )

[node name="Label" type="Label" parent="Book/VBoxContainer/Sound"]
margin_left = 9.0
margin_right = 49.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Sound"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="TextureButton" parent="Book/VBoxContainer"]
margin_top = 12.0
margin_right = 40.0
margin_bottom = 20.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="Book/VBoxContainer/Music"]
margin_left = 9.0
margin_top = -1.0
margin_right = 49.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Book/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 24.0
margin_right = 40.0
margin_bottom = 30.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="TextureButton" parent="Book/VBoxContainer"]
margin_top = 34.0
margin_right = 40.0
margin_bottom = 42.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="Book/VBoxContainer/Menu"]
margin_left = 9.0
margin_top = -1.0
margin_right = 49.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="gui_input" from="." to="." method="_on_OptionsMenu_gui_input"]
[connection signal="pressed" from="Book/VBoxContainer/Sound" to="." method="_on_Sound_pressed"]
[connection signal="pressed" from="Book/VBoxContainer/Music" to="." method="_on_Music_pressed"]
[connection signal="pressed" from="Book/VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
